--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,16 +1,20 @@
 <h2>{{data}}</h2>
 <div class="container rounded w-50 border text-center mt-5 p-5" style="background-color: rgba(0, 0, 0, 0.221);">
     <h1>Sing In To Your Bank Account</h1>
-    <form action="">
+    <form action=""(ngsubmit)='login()'>
         <div class="p-3 mt-2">
-            <input id="acid" #acno name="acnum" type="text" class="form-control" placeholder="Account Number">
+            <input [(ngModel)]="acano" id="acid" name="acnum" type="text" class="form-control"
+                placeholder="Account Number">
         </div>
 
         <div class="p-3 mt-2">
-            <input id="psw" #psw1 name="paswd" type="text" class="form-control" [placeholder]="input">
+            <input [(ngModel)]="pswrd" id="psw" name="paswd" type="text" class="form-control" [placeholder]="input">
         </div>
         <div class="p-3 mt-2">
-            <button type="button" (click)="login(acno,psw1)" class="btn btn-outline-light ">login</button>
+            <button type="submit" (click)="login()" class="btn btn-outline-light ">login</button>
+        </div>
+        <div class="text-center text-white">Not Registered ? <strong>
+            <a style="text-decoration: none;color: aqua;" routerLink="register">Register</a></strong>
         </div>
     </form>
 </div>
