--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,14 +1,14 @@
 <h2>{{data}}</h2>
 <div class="container rounded w-50 border text-center mt-5 p-5" style="background-color: rgba(0, 0, 0, 0.221);">
     <h1>Sing In To Your Bank Account</h1>
-    <form action=""(ngsubmit)='login()'>
+    <form action=""[formGroup]="loginform" (ngsubmit)='login()'>
         <div class="p-3 mt-2">
-            <input [(ngModel)]="acano" id="acid" name="acnum" type="text" class="form-control"
+            <input formControlName="acano" id="acid" name="acnum" type="text" class="form-control"
                 placeholder="Account Number">
         </div>
 
         <div class="p-3 mt-2">
-            <input [(ngModel)]="pswrd" id="psw" name="paswd" type="text" class="form-control" [placeholder]="input">
+            <input formControlName="pswrd" id="psw" name="paswd" type="text" class="form-control" [placeholder]="input">
         </div>
         <div class="p-3 mt-2">
             <button type="submit" (click)="login()" class="btn btn-outline-light ">login</button>
