--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,20 +1,33 @@
-<p>register works!</p>
 <div class="container rounded w-50 border text-center mt-5 p-5" style="background-color: rgba(0, 0, 0, 0.221);">
     <h1>Sing up To Your Bank Account</h1>
-    <form action="">
+    <form [formGroup]="registerForm" action="">
         <div class="p-3 mt-2">
-            <input [(ngModel)]="user2"  id="user" name="user1" type="text" class="form-control"
+            <input formControlName="user2"   id="user" name="user1" type="text" class="form-control"
                 placeholder="Enter Username">
+     
+        </div>
+        <div *ngIf="this.registerForm.get('user2')?.errors && this.registerForm.get('user2')?.touched">
+            <p class="text-danger">Must contain charectors</p>
         </div>
 
         <div class="p-3 mt-2">
-            <input [(ngModel)]="acno2" id="acid" name="acid1" type="text" class="form-control"
+            <input  id="acid" formControlName="acno2" name="acid1" type="text" class="form-control"
                 placeholder="Account Number">
         </div>
+        <div *ngIf="this.registerForm.get('acno2')?.errors && this.registerForm.get('user2')?.touched">
+            <p class="text-danger">accept only numbers</p>
+        </div>
+
+
 
         <div class="p-3 mt-2">
-            <input [(ngModel)]="pasw2" id="psw" name="paswd1" type="password" class="form-control" placeholder="Password">
+            <input  id="psw" formControlName="pasw2" name="paswd1" type="password" class="form-control" placeholder="Password">
         </div>
+        <div *ngIf="this.registerForm.get('pasw2')?.errors && this.registerForm.get('user2')?.touched">
+            <p class="text-danger">Must contain charectors or numbers</p>
+        </div>
+
+
         <div class="p-3 mt-2">
             <button type="button" (click)="register()"  class="btn btn-outline-warning ">Register</button>
         </div>
