--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,49 +1,68 @@
+<div class="text-end pt-3 pe-4 ">
+    <button class="btn btn-danger"(click)="deleteparent()">Delete Account</button>
+    <button class="btn btn-warning ms-2" (click)="logout()">LOGOUT</button>
+
+</div>
+<div class="text-center ">
+    <h2>{{datedetails | date:'short'}}</h2>
+</div>
 <h1 class="p-5 mt-5"> welcome {{user}}</h1>
-<div class=" mt-3 p-2 w-25 container text-center  border border-dark rounded-pill " style="background-color:rgba(0, 0, 0, 0.221);">
+<app-deleteconfirm (oncancel)="cancel()" [item]="acnod"></app-deleteconfirm>
+
+
+<div [ngClass]="acnod?'style':''" class=" mt-3 p-2 w-25 container text-center  border border-dark rounded-pill "
+    style="background-color:rgba(0, 0, 0, 0.221);">
     <a style="text-decoration:none;color:cyan ;" routerLink="/transaction">View Transaction History</a>
 </div>
 
-<div claas="container row mb-5 p-5 " >
-    <div class="text-center container col-lg-6 col-md-12"id="div1">
+
+<div [ngClass]="acnod?'style':''" claas="container row mb-5 p-5 ">
+    <div  class="text-center container col-lg-6 col-md-12" id="div1">
 
         <div class="container  w-75 rounded text-center mt-2 p-5" style="background-color: rgba(0, 0, 0, 0.221);">
             <h1 class="text-center">Deposit</h1>
-            <form action="">
+            <form action="" [formGroup]="depositForm">
                 <div class="p-3 mt-2">
-                    <input [(ngModel)]="acno" id="acid" name="acnum" type="text" class="form-control" placeholder="Enter acnum">
+                    <input formControlName="acno" id="acid" name="acnum" type="text" class="form-control"
+                        placeholder="Enter acnum">
                 </div>
 
                 <div class="p-3 mt-2">
-                    <input [(ngModel)]="pasw" id="psw" name="paswd" type="text" class="form-control" placeholder="Password">
+                    <input formControlName="pasw" id="psw" name="paswd" type="text" class="form-control"
+                        placeholder="Password">
                 </div>
 
                 <div class="p-3 mt-2">
-                    <input [(ngModel)]="amnt" id="amo1" name="amo" type="text" class="form-control" placeholder="Amount">
+                    <input formControlName="amnt" id="amo1" name="amo" type="text" class="form-control"
+                        placeholder="Amount">
                 </div>
 
                 <div class="p-3 mt-2">
-                    <button type="button"(click)="deposit()" class="btn btn-outline-light ">deposit</button>
+                    <button type="button" (click)="deposit()" class="btn btn-outline-light ">deposit</button>
                 </div>
             </form>
         </div>
     </div>
 
 
-<div class="text-center container col-lg-6 col-md-12 "id="div2">
+    <div class="text-center container col-lg-6 col-md-12 " id="div2">
 
         <div class="container  w-75 rounded text-center p-5 mt-2 " style="background-color: rgba(0, 0, 0, 0.221);">
             <h1 class="text-center">withdraw</h1>
-            <form action="">
+            <form action="" [formGroup]="withdrawForm">
                 <div class="p-3 mt-2">
-                    <input [(ngModel)]="acno1" id="acid2" name="acnum2" type="text" class="form-control" placeholder="Enter acnum">
+                    <input formControlName="acno1" id="acid2" name="acnum2" type="text" class="form-control"
+                        placeholder="Enter acnum">
                 </div>
 
                 <div class="p-3 mt-2">
-                    <input [(ngModel)]="pasw1" id="psw2" name="paswd2" type="text" class="form-control" placeholder="Password">
+                    <input formControlName="pasw1" id="psw2" name="paswd2" type="text" class="form-control"
+                        placeholder="Password">
                 </div>
 
                 <div class="p-3 mt-2">
-                    <input [(ngModel)]="amnt1" id="amo2" name="amo2" type="text" class="form-control" placeholder="Amount">
+                    <input formControlName="amnt1" id="amo2" name="amo2" type="text" class="form-control"
+                        placeholder="Amount">
                 </div>
 
                 <div class="p-3 mt-2">
@@ -52,6 +71,4 @@
             </form>
         </div>
     </div>
-
-    </div>
-
+</div>
